libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/use-tuple-path.jsonc
//@ run: fail
//@ description: any path that isn't an identifier should fail
[
  "::kernel::special_form::use",
  "::core",
  { "#tuple": ["::core::math::sub"] },
  //~^ ERROR Use a simple identifier here
  "x"
]
